# gasp2d

./: README.md  paper.md  pyproject.toml
examples/: analytic_QHOGroundState.py
src/gasp2d/: __init__.py  polar.py
src/gasp2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gasp2d/benchmarks/: benchmark_memory_and_bandwidth.py  benchmark_polar_basic.py  benchmark_polar_full.py  benchmark_polar_scaling.py
